{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 32,
  "lineage": "59e111f3-3884-9114-a10f-a37f7cbaa9ae",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfd094720a0e5372",
            "arn": "arn:aws:ec2:af-south-1:953216550432:instance/i-0dfefa39326c4bf71",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dfefa39326c4bf71",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08521a9f56f9cc23f",
            "private_dns": "ip-10-0-0-5.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.5",
            "public_dns": "ec2-13-245-157-17.af-south-1.compute.amazonaws.com",
            "public_ip": "13.245.157.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008f34949a46735de",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcf289d13603ef2e",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2f4b0d5ac9b28c5"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion.data.aws_ami.amazon_linux",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfd094720a0e5372",
            "arn": "arn:aws:ec2:af-south-1:953216550432:instance/i-04c928f21c70d4dc8",
            "associate_public_ip_address": false,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c928f21c70d4dc8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af9fdbef4cade070",
            "private_dns": "ip-10-0-2-163.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bd0ba2624a9b228c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0790de026f4764482",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-app"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c93be7071b9c0413"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux",
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:security-group/sg-0c93be7071b9c0413",
            "description": "Allow web traffic and SSH from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c93be7071b9c0413",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend API port",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion only",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b2f4b0d5ac9b28c5"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-project-dev-app-sg",
            "name_prefix": "",
            "owner_id": "953216550432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:security-group/sg-0b2f4b0d5ac9b28c5",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2f4b0d5ac9b28c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-project-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "953216550432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:security-group/sg-02479285b88d68781",
            "description": "Allow DocumentDB access from app server only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02479285b88d68781",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB/DocumentDB from app server only",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c93be7071b9c0413"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "devops-project-dev-db-sg",
            "name_prefix": "",
            "owner_id": "953216550432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.security_groups.aws_security_group.bastion",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa01ce3ca90f1913",
            "arn": "arn:aws:ec2:af-south-1:953216550432:elastic-ip/eipalloc-0fa01ce3ca90f1913",
            "association_id": "eipassoc-02ba6cdd4cbdc9e3f",
            "domain": "vpc",
            "id": "eipalloc-0fa01ce3ca90f1913",
            "network_border_group": "af-south-1",
            "network_interface": "eni-08110b1942163fa3f",
            "private_dns": "ip-10-0-0-44.af-south-1.compute.internal",
            "private_ip": "10.0.0.44",
            "public_dns": "ec2-15-240-34-20.af-south-1.compute.amazonaws.com",
            "public_ip": "15.240.34.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:internet-gateway/igw-00dcfebf8b52b6da0",
            "id": "igw-00dcfebf8b52b6da0",
            "owner_id": "953216550432",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-igw"
            },
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa01ce3ca90f1913",
            "association_id": "eipassoc-02ba6cdd4cbdc9e3f",
            "connectivity_type": "public",
            "id": "nat-00c66ca7e9318736a",
            "network_interface_id": "eni-08110b1942163fa3f",
            "private_ip": "10.0.0.44",
            "public_ip": "15.240.34.20",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dcf289d13603ef2e",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-nat-gw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:route-table/rtb-06a9211dd8166d5dd",
            "id": "rtb-06a9211dd8166d5dd",
            "owner_id": "953216550432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c66ca7e9318736a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:route-table/rtb-05bdfc436c8f1dddd",
            "id": "rtb-05bdfc436c8f1dddd",
            "owner_id": "953216550432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00dcfebf8b52b6da0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecb0beb04e66604b",
            "route_table_id": "rtb-06a9211dd8166d5dd",
            "subnet_id": "subnet-0790de026f4764482"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080b5069f10fc2a5",
            "route_table_id": "rtb-06a9211dd8166d5dd",
            "subnet_id": "subnet-01c3e2af5a59367fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe75d1bc1e6e0d96",
            "route_table_id": "rtb-05bdfc436c8f1dddd",
            "subnet_id": "subnet-0dcf289d13603ef2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b29abdd4a1bd46",
            "route_table_id": "rtb-05bdfc436c8f1dddd",
            "subnet_id": "subnet-00e6154afbce03d59"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:subnet/subnet-0790de026f4764482",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0790de026f4764482",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953216550432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-subnet-1"
            },
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:subnet/subnet-01c3e2af5a59367fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c3e2af5a59367fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953216550432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-private-subnet-2"
            },
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:subnet/subnet-0dcf289d13603ef2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcf289d13603ef2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953216550432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-subnet-1"
            },
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:subnet/subnet-00e6154afbce03d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1b",
            "availability_zone_id": "afs1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e6154afbce03d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "953216550432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-public-subnet-2"
            },
            "vpc_id": "vpc-0d6813ae270220613"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:953216550432:vpc/vpc-0d6813ae270220613",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e087d2f4672d2cb5",
            "default_route_table_id": "rtb-00128bcb5bb3ec620",
            "default_security_group_id": "sg-0936373785b392d52",
            "dhcp_options_id": "dopt-001b3f893c62bc916",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6813ae270220613",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00128bcb5bb3ec620",
            "owner_id": "953216550432",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}